# poker-planning

./: Dockerfile  LICENSE  README.md  package-lock.json  spec.yaml
client/: .env.local.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  README.md  codegen.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
client/.github/workflows/: playwright.yml
client/public/: index.html  manifest.json
client/src/: App.tsx  index.css  index.tsx  main.tsx  routeTree.gen.ts  setupProxy.js
client/src/api/: apollo-helpers.generated.ts  index.ts  operations.generated.ts  operations.graphql
client/src/components/: index.ts
client/src/components/AccountMenu/: index.tsx
client/src/components/Card/: index.tsx
client/src/components/ConfirmationDialog/: ConfirmationDialog.tsx  ConfirmationDialogProvider.tsx  confirmationDialog.test.tsx  constants.ts  index.ts  types.ts  useModal.ts
client/src/components/CreateUserDialog/: index.tsx
client/src/components/Deck/: index.tsx
client/src/components/EditUserDialog/: index.tsx
client/src/components/Header/: index.tsx
client/src/components/LinkBehavior/: index.tsx
client/src/components/PageLayout/: index.tsx
client/src/components/Player/: index.tsx
client/src/components/Room/: index.tsx
client/src/components/Table/: index.tsx
client/src/components/footer/: index.tsx
client/src/components/mode-toggle/: index.tsx
client/src/components/ui/: dialog.tsx  dropdown-menu.tsx  tooltip.tsx
client/src/components/vote-distribution-chart/: index.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: index.ts  useCopyRoomUrlToClipboard.ts  useKeyboardControls.ts
client/src/pages/: index.ts
client/src/pages/HomePage/: banner.tsx  feature-sections.tsx  index.tsx
client/src/pages/NewHomePage/: index.tsx  (+1 more)
client/src/routes/: __root.tsx  index.lazy.tsx  room.$roomId.lazy.tsx
client/src/settings/: apiUrls.ts  index.ts  path.ts
client/src/styles/: theme.ts
client/src/test/: test-utils.tsx
client/src/types/: index.ts  types.generated.ts
client/src/utils/: auth.ts  avatarNameToColor.ts  copyTextToClipboard.ts  getUserPickedCart.ts  index.ts
client/tests/: home-page.spec.ts  planning-poker.spec.ts  room-menu.spec.ts
server/: .env  Cargo.toml  Dockerfile  settings.yaml
server/configuration/: base.yaml  local.yaml
server/src/: configuration.rs  domain.rs  handlers.rs  main.rs  schema.rs  settings.rs  types.rs
server/src/domain/: deck.rs  game.rs  mod.rs  room.rs  user.rs
(+2 files in other folders)
