[package]
name = "poker-planning"
version = "0.1.0"
authors = ["MoDPhoenix <ivanchenko.b@gmail.com>"]
homepage = "https://pokerplanning.org/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
serde = { version = "1.0.130", features = ["derive"]}

actix-web = "3.3.2"
actix-rt = "2.2.0"
actix-cors = "0.5.4"

async-graphql = {version = "2.10.1", features = ["apollo_tracing", "uuid"]}
async-graphql-actix-web = "2.10.1"

env_logger = "0.9.0"

futures = "0.3.17"
futures-timer = "3.0.2"
async-stream = "0.3.2"

slab = "0.4.4"
once_cell = "1.8.0"


uuid = { version = "0.8.2", features = ["serde", "v4"] }
