[package]
name = "poker-planning"
version = "0.1.0"
authors = ["MoDPhoenix <ivanchenko.b@gmail.com>"]
homepage = "https://pokerplanning.org/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.1.0"

config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"]}
serde-aux = "3.1.0"

async-graphql = {version = "4.0.5", features = ["apollo_tracing", "uuid"]}
async-graphql-actix-web = "4.0.5"

env_logger = "0.9.0"

futures = "0.3.21"
futures-util = "0.3.21"
futures-channel = "0.3.21"
futures-timer = "3.0.2"
async-stream = "0.3.3"

slab = "0.4"
once_cell = "1.13"

uuid = { version = "1", features = ["v4", "serde"] }
